<resources>
    <string name="app_name">Context Player</string>
    
    <!-- activity_main.xml -->
    <string name="initial_time">0:00</string>
    
    <!-- activity_context.xml -->
    <string name="create_new_context">Create new context</string>
    
    <!-- operation_fragmennt.xml -->
    <string name="op_prev">Previous</string>
    <string name="op_play">Play</string>
    <string name="op_pause">Pause</string>
    <string name="op_next">Next</string>
    
    <!-- actionbar.xml -->
    <string name="action_about">About&#8230;</string>
    
    <!-- ContextActivity.java -->
    <string name="edit_the_context_name">Edit the context name</string>
    <string name="are_you_sure_to_delete_it">Are you sure to delete it?</string>
    <string name="cant_delete_the_last_context">Can\'t delete the last context.</string>
    <string name="name_the_new_context">Name the new context</string>
    
    <!-- ExplorerActivity.java -->
    <string name="unknown_title">unknown title</string>
    <string name="unknown_artist">unknown artist</string>
    
    <!-- MainActivity.java -->
    <string name="default_context">Default Context</string>
    <string name="please_grant_permission">This app accesses Music files in the external strorage. Please grant permission on the following dialog, or this app will exit.</string>
    
    <!-- PlayerService.java -->
    <string name="playing">Playing %1$s&#8230;</string>

    <!-- ActionBarFragment.java -->
    <string name="about">
      &lt;html&gt;&lt;body&gt;
	&lt;p&gt;Context Player v%1$s&lt;/p&gt;
	&lt;p&gt;This app is licensed under &lt;a href=&quot;http://www.gnu.org/licenses/gpl-3.0-standalone.html&quot;&gt;GPLv3&lt;a&gt;.&lt;/p&gt;
	&lt;p&gt;This app uses Activeandroid, whose license is &lt;a href=&quot;https://www.apache.org/licenses/LICENSE-2.0&quot;&gt;Apache License 2.0&lt;a&gt;.&lt;/p&gt;
      &lt;/body&gt;&lt;/html&gt;
    </string>
    
</resources>
