<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
  
  <!-- volumebar -->
  
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingBottom="@dimen/activity_vertical_margin">
    
    <ImageView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="bottom"
	android:src="@drawable/ic_volume_down_white_24px"/>
    
    <LinearLayout
	android:layout_width="0dp"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:orientation="vertical">
      
      <LinearLayout
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:orientation="horizontal">
	
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="50%"
	    android:textIsSelectable="false"/>
	
	<View
	    android:layout_width="0dp"
	    android:layout_weight="1"
	    android:layout_height="1px"/>
	
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="100%"
	    android:textIsSelectable="false"/>
	
      </LinearLayout>
      
      <SeekBar
	  android:id="@+id/volume"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"/>
      
    </LinearLayout>
    
    <ImageView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="bottom"
	android:src="@drawable/ic_volume_up_white_24px"/>
    
  </LinearLayout>
  
  <!-- seekbar -->
  
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingBottom="@dimen/activity_vertical_margin">
    
    <ImageView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="bottom"
	android:src="@drawable/ic_fast_rewind_white_24px"/>
    
    <LinearLayout
	android:layout_width="0dp"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:orientation="vertical">
      
      <LinearLayout
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:orientation="horizontal">
	
	<TextView
	    android:id="@+id/playing_curtime"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/initial_time"
	    android:textIsSelectable="false"/>
	
	<View
	    android:layout_width="0dp"
	    android:layout_weight="1"
	    android:layout_height="1px"/>
	
	<TextView
	    android:id="@+id/playing_maxtime"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/initial_time"
	    android:textIsSelectable="false"/>
	
      </LinearLayout>
      
      <SeekBar
	  android:id="@+id/playing_pos"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"/>
      
    </LinearLayout>
    
    <ImageView
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="bottom"
	android:src="@drawable/ic_fast_forward_white_24px"/>
    
  </LinearLayout>
  
  <!-- buttons -->
  
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
    
    <ImageButton
	android:id="@+id/op_prev"
	android:layout_width="0dp"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:padding="3dp"
	android:layout_margin="4dp"
	android:background="@drawable/image_button"
	android:stateListAnimator="@anim/image_button"
	android:src="@android:drawable/ic_media_previous"
	android:contentDescription="@string/op_prev"/>
    
    <ImageButton
	android:id="@+id/op_play"
	android:layout_width="0dp"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:padding="3dp"
	android:layout_margin="4dp"
	android:background="@drawable/image_button"
	android:stateListAnimator="@anim/image_button"
	android:src="@android:drawable/ic_media_play"
	android:contentDescription="@string/op_play"/>
    
    <ImageButton
	android:id="@+id/op_pause"
	android:layout_width="0dp"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:padding="3dp"
	android:layout_margin="4dp"
	android:background="@drawable/image_button"
	android:stateListAnimator="@anim/image_button"
	android:src="@android:drawable/ic_media_pause"
	android:contentDescription="@string/op_pause"/>
    
    <ImageButton
	android:id="@+id/op_next"
	android:layout_width="0dp"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:padding="3dp"
	android:layout_margin="4dp"
	android:background="@drawable/image_button"
	android:stateListAnimator="@anim/image_button"
	android:src="@android:drawable/ic_media_next"
	android:contentDescription="@string/op_next"/>
    
  </LinearLayout>

</LinearLayout>
